# notion_to_md

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/: notion_to_md.py  pyproject.toml
src/notion_to_md/: __init__.py  notion_to_md.py
src/notion_to_md/utils/: __init__.py  md.py  types.py
src/utils/: notion.py
tests/: test_md.py
