[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-notion-to-md"
version = "0.1.0"
description = "Convert Notion pages to Markdown - Python port of notion-to-md"
authors = [
    {name = "Emre-C", email = "emre.coklar@gmail.com"}
]
dependencies = [
    "notion-client>=2.0.0",
    "aiohttp>=3.8.0",
    "tenacity>=8.0.0"
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Markup",
    "Framework :: AsyncIO",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = true
reportInvalidTypeForm = true

[tool.hatch.build.targets.wheel]
packages = ["src/notion_to_md"]
