[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion_to_md"
version = "0.1.0"
description = "Convert Notion pages to Markdown - Python port of notion-to-md"
authors = [
  {name = "Emre-C", email = "emre.coklar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "notion-client>=2.0.0",
  "aiohttp>=3.8.0",
  "tenacity>=8.0.0"
]

packages = [
  { include = "notion_to_md", from = "src" }
]