[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion2md"
version = "0.1.0"
description = "Convert Notion pages to Markdown"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "notion-client>=2.0.0",
    "aiohttp>=3.8.0",
    "tenacity>=8.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
include = ["notion2md"]
typeCheckingMode = "basic"
reportMissingImports = true
reportInvalidTypeForm = true
